--- a/v2/Um.html
+++ b/v2/Um.html
@@ -7,7 +7,7 @@
  <body>
    <h1>Thor Sanchez</h1>
    <h1>ths281@hi.is</h1>
-   <a href="index.html">Forsíða</a></STRONG></p>
+   <a href="Fyrirsogn.html">Forsíða</a></STRONG></p>
    <p>mynd :</p>
    <img
    src="img/gains.jpg"
