--- a/v2/Index.html
+++ b/v2/Index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Fyrisögn</h1>
-    <p>Halló heimur,<STRONG>MIKILVÆGT <a href="Um.html">Þetta er tengill</a></STRONG></p>
+    <p>Halló heimur,<STRONG>MIKILVÆGT <a href="Index.html">Þetta er tengill</a></STRONG></p>
     <p>Halló heimur</p>
     <marquee><p>Halló heimur</p></marquee>
     <p><b>Halló heimur</b></p>
