--- a/v2/Index.html
+++ b/v2/Index.html
@@ -11,6 +11,7 @@
     <marquee><p>Halló heimur</p></marquee>
     <p><b>Halló heimur</b></p>
     <p>Halló heimur</p>
+    <a href="Baekur.html">Bækur</a></STRONG></p>
   
   </body>
 </html>
