--- a/v2/Index.html
+++ b/v2/Index.html
@@ -5,10 +5,10 @@
     <title>Halló heimur</title>
   </head>
   <body>
-    <h1>Fyrisögn</h1>
-    <p>Halló heimur,<STRONG>MIKILVÆGT <a href="About.html">Þetta er tengill</a></STRONG></p>
+    <h1>Á þessari síðu má finna yfirsýn yfir forrit og forritun:</h1>
+    <p>Upplýsingar um forrit og forritun, sögu og dæmi um forrit. <a href="About.html">Þetta er tengill</a></STRONG></p>
     <p>Halló heimur</p>
-    <marquee><p>Halló heimur</p></marquee>
+    
     <p><b>Halló heimur</b></p>
     <p>Halló heimur</p>
     <a href="Baekur.html">Bækur</a></STRONG></p>
