--- a/v2/Index.html
+++ b/v2/Index.html
@@ -6,12 +6,9 @@
   </head>
   <body>
     <h1>Á þessari síðu má finna yfirsýn yfir forrit og forritun:</h1>
-    <p>Upplýsingar um forrit og forritun, sögu og dæmi um forrit. <a href="About.html">Þetta er tengill</a></STRONG></p>
-    <p>Halló heimur</p>
+    <p>Upplýsingar um forrit og forritun, sögu og dæmi um forrit. <a href="Um.html">Þetta er tengill</a></STRONG></p>
+    <p>Könnun um þekkingu og reynslu lesanda af forritun. <a href="About.html">Þetta er tengill</a></STRONG></p>
+    <p>Listi af bókum um forritun. <a href="Baekur.html">Þetta er tengill</a></STRONG></p>
     
-    <p><b>Halló heimur</b></p>
-    <p>Halló heimur</p>
-    <a href="Baekur.html">Bækur</a></STRONG></p>
-  
   </body>
 </html>
