--- a/v2/Index.html
+++ b/v2/Index.html
@@ -8,7 +8,7 @@
     <h1>Á þessari síðu má finna yfirsýn yfir forrit og forritun:</h1>
     <p>Upplýsingar um forrit og forritun, sögu og dæmi um forrit. <a href="Um.html">Þetta er tengill</a></STRONG></p>
     <p>Könnun um þekkingu og reynslu lesanda af forritun. <a href="About.html">Þetta er tengill</a></STRONG></p>
-    <p>Listi af bókum um forritun. <a href="Baekur.html">Þetta er tengill</a></STRONG></p>
+    <p>Listi af bókum um forritun. <a href="Baekur.html">Þetta er tengill</a> Varuð nytt</p>
     
   </body>
 </html>
