--- a/v2/About.html
+++ b/v2/About.html
@@ -10,7 +10,7 @@
    <a href="Index.html">Forsíða</a></STRONG></p>
    <p>mynd :</p>
    <img
-   src="img/gains.jpg"
+   src="Myndir/gains.jpg"
    with="320"
    height="320"
    alt="mynd"
