--- a/v2/sidur/Baekur.html
+++ b/v2/sidur/Baekur.html
@@ -2,7 +2,7 @@
 <html lang="is">
   <head>
     <meta charset="utf-8">
-    <title>Bækur</title>
+    <title>Halló</title>
   </head>
   <body>
     <li>The Pragmatic Programmer: From Journeyman to Master;Andy Hunt;https://www.goodreads.com/book/show/4099.The_Pragmatic_Programmer</li>
