--- a/v2/About.html
+++ b/v2/About.html
@@ -2,8 +2,10 @@
 <html lang="is">
  <head>
    <meta charset="utf-8">
-   <title>Nemandi</title>
+   <title>
+   </title>
  </head>
+
  <body>
    <h1>Thor Sanchez</h1>
    <h1>ths281@hi.is</h1>
