--- a/v2/Index.html
+++ b/v2/Index.html
@@ -2,10 +2,14 @@
 <html lang="is">
   <head>
     <meta charset="utf-8">
-    <title>Halló heimur</title>
+    <title>forsiða</title>
   </head>
-  <body>
+  <body style="background: url(Myndir/ice.jpg);
+                background-size: 100%;
+                background-repeat: no-repeat";
+                link="#000">
     <h1>Á þessari síðu má finna yfirsýn yfir forrit og forritun:</h1>
+
     <p>Upplýsingar um forrit og forritun, sögu og dæmi um forrit. <a href="sidur/Um.html">Þetta er tengill</a></STRONG></p>
     <p>Könnun um þekkingu og reynslu lesanda af forritun. <a href="About.html">Þetta er tengill</a></STRONG></p>
     <p>Listi af bókum um forritun. <a href="sidur/Baekur.html">Þetta er tengill</a></STRONG></p>
