--- a/v2/sidur/Baekur.html
+++ b/v2/sidur/Baekur.html
@@ -5,7 +5,23 @@
     <title>Halló</title>
   </head>
   <body>
-    <li>The Pragmatic Programmer: From Journeyman to Master;Andy Hunt;https://www.goodreads.com/book/show/4099.The_Pragmatic_Programmer</li>
+    <table border="1" width="1010" heigth="150"
+    <tr> 
+      <td>heiti</td>
+      <td>Höfund</td>
+    </tr>
+    <tr>
+      <td> The Pragmatic Programmer: From Journeyman to Master;Andy Hunt;</td>
+      <td>https://www.goodreads.com/book/show/4099.The_Pragmatic_Programmer</td>
+</tr>
+<tr>
+<td>The C Programming Language;Brian W. Kernighan;</td>
+<td>https://www.goodreads.com/book/show/515601.The_C_Programming_Language</td>
+</tr>
+</table>
+
+
+
 <li>The C Programming Language;Brian W. Kernighan;https://www.goodreads.com/book/show/515601.The_C_Programming_Language</li>
 <li>Clean Code: A Handbook of Agile Software Craftsmanship;Robert C. Martin;https://www.goodreads.com/book/show/3735293-clean-code</li>
 <li>Design Patterns: Elements of Reusable Object-Oriented Software;Erich Gamma;https://www.goodreads.com/book/show/85009.Design_Patterns</li>
