--- a/v2/sidur/Um.html
+++ b/v2/sidur/Um.html
@@ -22,28 +22,38 @@
 <p></p>
 <p>Texti fenginn af Wikipedia síðunni „Forrit“ í ágúst 2022. (tengill á https://is.wikipedia.org/wiki/Forrit)</p>
 <p></p>
-<img src="Myndir/tolva.jpg">
+<img src="../Myndir/ice.jpg"
+width="500" 
+height="400">
 <p></p>
 <strong><u>Vinsæl forritunarmál</strong></u>
 <p></p>
 <p>Samkvæmt IEEE Spectrum’s Top Programming Languages 2022 eru tíu vinsælustu forritunarmálin árið 2022:</p>
 <p></p>
-<p>[raðaður listi]</p>
-    <p>Python</p>
-    <p>C++</p>
-    <p>Java</p>
-    <p>C</p>
-    <p>C#</p>
-    <p>PHP</p>
-    <p>R</p>
-    <p>JavaScript</p>
-    <p>Go</p>
-    <p>Assembly</p>
-<p></p>
-<p>Dæmi um forrit [fyrirsögn]</p>
-<p></p>
-<p>Forritskóði sem reiknar hrópmerkt í Python, fengin af Wikipedia: (tengill á https://en.wikipedia.org/wiki/Python_(programming_language))</p>
-<p></p>
+
+    <th>Raðaður listi</th>
+
+     <ol>
+    <li>Python</li>
+    <li>C++</li>
+    <li>Java</li>
+    <li>C</li>
+    <li>C#</li>
+    <li>PHP</li>
+    <li>R</li>
+    <li>JavaScript</li>
+    <li>Go</li>
+    <li>Assembly</li>
+     </ol>
+
+
+        
+<strong><u>Dæmi um forrit</strong></u>
+<p>
+Forritskóði sem reiknar hrópmerkt í Python, fengin af Wikipedia: (tengill á 
+    "https://en.wikipedia.org/wiki/Python_(programming_language)) </p>
+
+
 <p>n = int(input('Type a number, and its factorial will be printed: '))</p>
 <p></p>
 <p>if n < 0:</p>
