--- a/v2/sidur/Konnun.html
+++ b/v2/sidur/Konnun.html
@@ -1,3 +1,5 @@
+<h1>Reynsla af forritun</h1>
+<form>
 <label for="Code">Forritunarmál sem ég kann best:</label>
 
 <select name="Code" id="programming_language" required>
@@ -176,7 +178,7 @@
 <option value="Raku">Raku</option>
 </select>
 
-<label for="number">Forritunarmál sem ég kann best:</label>
+<p><label for="number">Hversu vel kanntu forritunarmálið á skalanum 0 til 10?</label>
 <select name="number" id="number">
 
     <option value="0">0</option>
@@ -191,16 +193,239 @@
     <option value="9">9</option>
     <option value="10">10</option>
 
+</select></p>
+
+<p> <div class="group">
+    <label>Hvað finnst þér best við forritunarmálið?</label>
+    <input type="text" required="required" placeholder="Fylltu inn her"></p> 
+  </div>
+
+  <p> <div class="group">
+    <label>Hvað finnst þér verst við forritunarmálið?</label>
+    <input type="text" required="required" placeholder="Fylltu inn her"></p>
+  </div>
+
+  <form action="/action_page.php">
+    <label for="myfile">Velja skrá:</label>
+    <input type="file" id="myfile" name="myfile"><br><br>
+
+
+
+<h1>Forritunarmál sem mig langar að læra</h1>
+
+<label for="Code">Forritunarmál sem mig langar að læra</label>
+
+<select name="Code" id="programming_language" required="required">
+ 
+
+<option value="Python">Python</option>
+<option value="C++">C++</option>
+<option value="Java">Java</option>
+<option value="C">C</option>
+<option value="C#">C#</option>
+<option value="PHP">PHP</option>
+<option value="R">R</option>
+<option value="JavaScript">JavaScript</option>
+<option value="Go">Go</option>
+<option value="Assembly">Assembly</option>
+<option value="Matlab">Matlab</option>
+<option value="Scala">Scala</option>
+<option value="Ruby">Ruby</option>
+<option value="HTML">HTML</option>
+<option value="Arduino">Arduino</option>
+<option value="Shell">Shell</option>
+<option value="Perl">Perl</option>
+<option value="Swift">Swift</option>
+<option value="Objective-C">Objective-C</option>
+<option value="Lua">Lua</option>
+<option value="Fortran">Fortran</option>
+<option value="SQL">SQL</option>
+<option value="Haskell">Haskell</option>
+<option value="VHDL">VHDL</option>
+<option value="Visual Basic">Visual Basic</option>
+<option value="Cuda">Cuda</option>
+<option value="Rust">Rust</option>
+<option value="Verilog">Verilog</option>
+<option value="D">D</option>
+<option value="Pascal/Delphi">Pascal/Delphi</option>
+<option value="Julia">Julia</option>
+<option value="Lisp">Lisp</option>
+<option value="Prolog">Prolog</option>
+<option value="LabView">LabView</option>
+<option value="Erlang">Erlang</option>
+<option value="SAS">SAS</option>
+<option value="Clojure">Clojure</option>
+<option value="Cobol">Cobol</option>
+<option value="ABAP">ABAP</option>
+<option value="TCL">TCL</option>
+<option value="Ada">Ada</option>
+<option value="Scheme">Scheme</option>
+<option value="J">J</option>
+<option value="Ocaml">Ocaml</option>
+<option value="Ladder Logic">Ladder Logic</option>
+<option value="Groovy">Groovy</option>
+<option value="Dart">Dart</option>
+<option value="CoffeeScript">CoffeeScript</option>
+<option value="Forth">Forth</option>
+<option value="Kotlin">Kotlin</option>
+<option value="Elixir">Elixir</option>
+<option value="F#">F#</option>
+<option value="Eiffel">Eiffel</option>
+<option value="Elm">Elm</option>
+<option value="WebAssembly">WebAssembly</option>
+<option value="TypeScript">TypeScript</option>
+<option value="Raku">Raku</option>
+<option value="Python">Python</option>
+<option value="C++">C++</option>
+<option value="Java">Java</option>
+<option value="C">C</option>
+<option value="C#">C#</option>
+<option value="PHP">PHP</option>
+<option value="R">R</option>
+<option value="JavaScript">JavaScript</option>
+<option value="Go">Go</option>
+<option value="Assembly">Assembly</option>
+<option value="Matlab">Matlab</option>
+<option value="Scala">Scala</option>
+<option value="Ruby">Ruby</option>
+<option value="HTML">HTML</option>
+<option value="Arduino">Arduino</option>
+<option value="Shell">Shell</option>
+<option value="Perl">Perl</option>
+<option value="Swift">Swift</option>
+<option value="Objective-C">Objective-C</option>
+<option value="Lua">Lua</option>
+<option value="Fortran">Fortran</option>
+<option value="SQL">SQL</option>
+<option value="Haskell">Haskell</option>
+<option value="VHDL">VHDL</option>
+<option value="Visual Basic">Visual Basic</option>
+<option value="Cuda">Cuda</option>
+<option value="Rust">Rust</option>
+<option value="Verilog">Verilog</option>
+<option value="D">D</option>
+<option value="Pascal/Delphi">Pascal/Delphi</option>
+<option value="Julia">Julia</option>
+<option value="Lisp">Lisp</option>
+<option value="Prolog">Prolog</option>
+<option value="LabView">LabView</option>
+<option value="Erlang">Erlang</option>
+<option value="SAS">SAS</option>
+<option value="Clojure">Clojure</option>
+<option value="Cobol">Cobol</option>
+<option value="ABAP">ABAP</option>
+<option value="TCL">TCL</option>
+<option value="Ada">Ada</option>
+<option value="Scheme">Scheme</option>
+<option value="J">J</option>
+<option value="Ocaml">Ocaml</option>
+<option value="Ladder Logic">Ladder Logic</option>
+<option value="Groovy">Groovy</option>
+<option value="Dart">Dart</option>
+<option value="CoffeeScript">CoffeeScript</option>
+<option value="Forth">Forth</option>
+<option value="Kotlin">Kotlin</option>
+<option value="Elixir">Elixir</option>
+<option value="F#">F#</option>
+<option value="Eiffel">Eiffel</option>
+<option value="Elm">Elm</option>
+<option value="WebAssembly">WebAssembly</option>
+<option value="TypeScript">TypeScript</option>
+<option value="Raku">Raku</option>
+<option value="Python">Python</option>
+<option value="C++">C++</option>
+<option value="Java">Java</option>
+<option value="C">C</option>
+<option value="C#">C#</option>
+<option value="PHP">PHP</option>
+<option value="R">R</option>
+<option value="JavaScript">JavaScript</option>
+<option value="Go">Go</option>
+<option value="Assembly">Assembly</option>
+<option value="Matlab">Matlab</option>
+<option value="Scala">Scala</option>
+<option value="Ruby">Ruby</option>
+<option value="HTML">HTML</option>
+<option value="Arduino">Arduino</option>
+<option value="Shell">Shell</option>
+<option value="Perl">Perl</option>
+<option value="Swift">Swift</option>
+<option value="Objective-C">Objective-C</option>
+<option value="Lua">Lua</option>
+<option value="Fortran">Fortran</option>
+<option value="SQL">SQL</option>
+<option value="Haskell">Haskell</option>
+<option value="VHDL">VHDL</option>
+<option value="Visual Basic">Visual Basic</option>
+<option value="Cuda">Cuda</option>
+<option value="Rust">Rust</option>
+<option value="Verilog">Verilog</option>
+<option value="D">D</option>
+<option value="Pascal/Delphi">Pascal/Delphi</option>
+<option value="Julia">Julia</option>
+<option value="Lisp">Lisp</option>
+<option value="Prolog">Prolog</option>
+<option value="LabView">LabView</option>
+<option value="Erlang">Erlang</option>
+<option value="SAS">SAS</option>
+<option value="Clojure">Clojure</option>
+<option value="Cobol">Cobol</option>
+<option value="ABAP">ABAP</option>
+<option value="TCL">TCL</option>
+<option value="Ada">Ada</option>
+<option value="Scheme">Scheme</option>
+<option value="J">J</option>
+<option value="Ocaml">Ocaml</option>
+<option value="Ladder Logic">Ladder Logic</option>
+<option value="Groovy">Groovy</option>
+<option value="Dart">Dart</option>
+<option value="CoffeeScript">CoffeeScript</option>
+<option value="Forth">Forth</option>
+<option value="Kotlin">Kotlin</option>
+<option value="Elixir">Elixir</option>
+<option value="F#">F#</option>
+<option value="Eiffel">Eiffel</option>
+<option value="Elm">Elm</option>
+<option value="WebAssembly">WebAssembly</option>
+<option value="TypeScript">TypeScript</option>
+<option value="Raku">Raku</option>
 </select>
 
-<label for="spurning">Hvað finnst þér best við forritunarmálið?:</label>
+
+<p><label for="answer">Hvers vegna langar þig að læra þetta forritunarmál</label>
+
+<select name="answer" id="answer" required>
+<option selected disabled>-Veldu úr listanum-</option>
+<option value="Vegna vinnu">Vegna vinnu</option>
+<option value="Fyrir akademísk störf">Fyrir akademísk störf</option>
+<option value="Forvitni">Forvitni</option></p>
 
 
+</select>
+<p>Annað:</p>
+<p><textarea name="textarea"
+rows="5" cols="20">Skrifa hér</textarea></p>
+
+<h1>Hafa samband</h1>
 
 
-<br><br>
-<input type="submit" value="Submit">
-</form>
+    <div>
+      <input type="checkbox" id="coding" name="interest" value="coding">
+      <label for="coding">Það má hafa samband við mig</label>
+    </div>
+
+    <p><label for="Spurning">Netfang:</label>
+        <input type="text" id="Question" Question="Question" placeholder="@"></p>
+
+        <p><label for="Spurning">Sími:</label>
+            <input type="text" id="Question" Question="Question" placeholder="000-0000"></p>
+
+
+            <br><br>
+            <input type="submit" value="Submit">
+            </form>
+
+
 
 </body>
 </html>
