--- a/v2/sidur/Um.html
+++ b/v2/sidur/Um.html
@@ -20,7 +20,7 @@
 <p></p>
 <p>Forrit sem látin eru notendum í té eru nefnd notendahugbúnaður þar sem virkni þeirra beinist að því sem á að nota tölvuna í, umfram það sem stýrikerfi hennar (til dæmis Windows) sér um. Í raun og veru kallast bæði notendahugbúnaður og stýrikefið „hugbúnaður“, rétt eins og safn ýmssa forritaþátta sem er innbyggt í vélbúnaðinn. Þau forrit sem gefa vélbúnaðinum beinar skipanir eru á formi sem örgjörvinn skilur og bregst við með því að virkja aðrar skipanir eða framkvæma einfaldar reikniaðgerðir eins og til dæmis samlagningu. En tölvur framkvæma milljónir slíkra skipana á sekúndu og það er þannig heild sem forritið lætur verða til - skipanir sem hver á fætur annarri gera eitthvað gagnlegt í sameiningu og sem oftast má endurtaka og treysta að verki á sama hátt.</p>
 <p></p>
-<p>Texti fenginn af Wikipedia síðunni „Forrit“ í ágúst 2022. (tengill á https://is.wikipedia.org/wiki/Forrit)</p>
+<p>Texti fenginn af Wikipedia síðunni „Forrit“ í ágúst 2022. <a href="https://is.wikipedia.org/wiki/Forrit"> Tengill á https://is.wikipedia.org/wiki/Forrit</a></p>
 <p></p>
 <img src="../Myndir/ice.jpg"
 width="500" 
@@ -50,8 +50,8 @@ height="400">
         
 <strong><u>Dæmi um forrit</strong></u>
 <p>
-Forritskóði sem reiknar hrópmerkt í Python, fengin af Wikipedia: (tengill á 
-    "https://en.wikipedia.org/wiki/Python_(programming_language)) </p>
+Forritskóði sem reiknar hrópmerkt í Python, fengin af Wikipedia:
+    <a href="https://en.wikipedia.org/wiki/Python_(programming_language))"> Tengill á https://en.wikipedia.org/wiki/Python_(programming_language))</a></p>
 
 
 <p>n = int(input('Type a number, and its factorial will be printed: '))</p>
