--- a/v2/sidur/Baekur.html
+++ b/v2/sidur/Baekur.html
@@ -5,41 +5,33 @@
     <title>Halló</title>
   </head>
   <body>
-    <table border="1" width="1010" heigth="150"
-    <tr> 
+    <table> 
       <td>heiti</td>
       <td>Höfund</td>
     </tr>
     <tr>
-      <td> The Pragmatic Programmer: From Journeyman to Master;Andy Hunt;</td>
-      <td>https://www.goodreads.com/book/show/4099.The_Pragmatic_Programmer</td>
-</tr>
+      <td> <a href=https://www.goodreads.com/book/show/4099.The_Pragmatic_Programmer> The Pragmatic Programmer: 
+        From Journeyman to Master</a></td>
+      <td>Andy Hunt</td>
+      </tr>
 <tr>
-<td>The C Programming Language;Brian W. Kernighan;</td>
-<td>https://www.goodreads.com/book/show/515601.The_C_Programming_Language</td>
+      <td> <a href=https://www.goodreads.com/book/show/515601.The_C_Programming_Language> The C Programming Language</a></td>
+  <td>Brian W. Kernighan</td>
 </tr>
-</table>
+
+<tr>
+      <td> <a href=https://www.goodreads.com/book/show/3735293-clean-code> The C Programming Language</a></td>
+  <td>Brian W. Kernighan</td>
+</tr>
+
+<tr>
+      <td> <a href=https://www.goodreads.com/book/show/515601.The_C_Programming_Language> Clean Code: A Handbook of Agile Software Craftsmanship</a></td>
+  <td>Robert C</td>
+</tr>
+
+      
 
 
 
-<li>The C Programming Language;Brian W. Kernighan;https://www.goodreads.com/book/show/515601.The_C_Programming_Language</li>
-<li>Clean Code: A Handbook of Agile Software Craftsmanship;Robert C. Martin;https://www.goodreads.com/book/show/3735293-clean-code</li>
-<li>Design Patterns: Elements of Reusable Object-Oriented Software;Erich Gamma;https://www.goodreads.com/book/show/85009.Design_Patterns</li>
-<li>Code Complete;Steve McConnell;https://www.goodreads.com/book/show/4845.Code_Complete</li>
-<li>Structure and Interpretation of Computer Programs;Harold Abelson;https://www.goodreads.com/book/show/43713.Structure_and_Interpretation_of_Computer_Programs</li>
-<li>Introduction to Algorithms;Thomas H. Cormen;https://www.goodreads.com/book/show/108986.Introduction_to_Algorithms</li>
-<li>Refactoring: Improving the Design of Existing Code;Martin Fowler;https://www.goodreads.com/book/show/44936.Refactoring</li>
-<li>The Mythical Man-Month: Essays on Software Engineering;Frederick P. Brooks Jr.;https://www.goodreads.com/book/show/13629.The_Mythical_Man_Month</li>
-<li>The Art of Computer Programming, Volumes 1-3 Boxed Set;Donald Ervin Knuth;https://www.goodreads.com/book/show/112239.The_Art_of_Computer_Programming_Volumes_1_3_Boxed_Set</li>
-<li>Head First Design Patterns;Eric Freeman;https://www.goodreads.com/book/show/58128.Head_First_Design_Patterns</li>
-<li>The Clean Coder: A Code of Conduct for Professional Programmers;Robert C. Martin;https://www.goodreads.com/book/show/10284614-the-clean-coder</li>
-<li>The C++ Programming Language;Bjarne Stroustrup;https://www.goodreads.com/book/show/112251.The_C_Programming_Language</li>
-<li>JavaScript: The Good Parts;Douglas Crockford;https://www.goodreads.com/book/show/2998152-javascript</li>
-<li>Working Effectively with Legacy Code;Michael C. Feathers;https://www.goodreads.com/book/show/44919.Working_Effectively_with_Legacy_Code</li>
-<li>Compilers: Principles, Techniques, and Tools;Alfred V. Aho;https://www.goodreads.com/book/show/703102.Compilers</li>
-<li>The Little Schemer;Daniel P. Friedman;https://www.goodreads.com/book/show/548914.The_Little_Schemer</li>
-<li>Modern Operating Systems;Andrew S. Tanenbaum;https://www.goodreads.com/book/show/166195.Modern_Operating_Systems</li>
-<li>Test-Driven Development: By Example;Kent Beck;https://www.goodreads.com/book/show/387190.Test_Driven_Development</li>
-<li>The UNIX Programming Environment;Brian W. Kernighan;https://www.goodreads.com/book/show/337338.The_UNIX_Programming_Environment</li>
   </body>
 </html>
