--- a/v2/sidur/Konnun.html
+++ b/v2/sidur/Konnun.html
@@ -1,4 +1,24 @@
+<!doctype html>
+<html lang="is">
+  <head>
+    <meta charset="utf-8">
+    <title>forsiða</title>
+  </head>
+
+  <nav>
+    <ul>
+<li><h3> <a href="../Index.html">Heim</a>
+ <a href="baekur.html">Baekur</a>
+ <a href="Um.html">Um</a>
+ <a href="Konnun.html">Konnun</a>
+</h3>
+</li>
+  </nav>
+
 <h1>Reynsla af forritun</h1>
+
+
+
 <form>
 <label for="Code">Forritunarmál sem ég kann best:</label>
 
