--- a/v2/sidur/Um.html
+++ b/v2/sidur/Um.html
@@ -4,6 +4,15 @@
     <meta charset="utf-8">
     <title>Halló heimur</title>
   </head>
+  <nav>
+    <ul>
+<li><h3> <a href="../Index.html">Heim</a>
+ <a href="../sidur/baekur.html">Baekur</a>
+ <a href="sidur/Um.html">Um</a>
+ <a href="../sidur/Konnun.html">Konnun</a>
+</h3>
+</li>
+  </nav>
   <body>
 <strong>„Programming is the art of telling another human being what one wants the computer to do.“
 —Donald Knuth</strong><br><br>
@@ -22,13 +31,13 @@
 <p></p>
 <p>Texti fenginn af Wikipedia síðunni „Forrit“ í ágúst 2022. <a href="https://is.wikipedia.org/wiki/Forrit"> Tengill á https://is.wikipedia.org/wiki/Forrit</a></p>
 <p></p>
-<img src="../Myndir/ice.jpg"
-width="500" 
+<img src="../Myndir/tolva.jpg"
+width="600" 
 height="400">
 <p></p>
 <strong><u>Vinsæl forritunarmál</strong></u>
 <p></p>
-<p>Samkvæmt IEEE Spectrum’s Top Programming Languages 2022 eru tíu vinsælustu forritunarmálin árið 2022:</p>
+<p>Samkvæmt <u> IEEE Spectrum’s Top Programming Languages 2022 </u> u eru tíu vinsælustu forritunarmálin árið 2022:</p>
 <p></p>
 
     <th>Raðaður listi</th>
