--- a/v2/sidur/Baekur.html
+++ b/v2/sidur/Baekur.html
@@ -4,11 +4,24 @@
     <meta charset="utf-8">
     <title>Halló</title>
   </head>
-  <body>
+
+  <nav>
+  
+<h3> <a href="../Index.html">Heim</a>
+ <a href="../sidur/baekur.html">Baekur</a>
+ <a href="../sidur/Um.html">Um</a>
+ <a href="../sidur/Konnun.html">Konnun</a>
+</h3>
+  </nav>
+
+
     <table> 
-      <td>heiti</td>
-      <td>Höfund</td>
+
+      <tr>
+      <th>heiti</th>
+      <th>Höfund</th>
     </tr>
+
     <tr>
       <td> <a href=https://www.goodreads.com/book/show/4099.The_Pragmatic_Programmer> The Pragmatic Programmer: 
         From Journeyman to Master</a></td>
@@ -29,8 +42,10 @@
   <td>Robert C</td>
 </tr>
 
-      
+</table>    
 
+
+<p><a href="../Index.html">Til baka á forsíðu</a></p>
 
 
   </body>
