--- a/v2/Index.html
+++ b/v2/Index.html
@@ -5,26 +5,27 @@
     <title>forsiða</title>
   </head>
   <nav>
-    <ul>
-<li><h3> <a href="Index.html">Heim</a>
+  
+<h3> <a href="Index.html">Heim</a>
  <a href="sidur/baekur.html">Baekur</a>
  <a href="sidur/Um.html">Um</a>
  <a href="sidur/Konnun.html">Konnun</a>
 </h3>
-</li>
   </nav>
 
 
     <h1>Á þessari síðu má finna yfirsýn yfir forrit og forritun:</h1>
 
-    <p>Upplýsingar um forrit og forritun, sögu og dæmi um forrit. <a href="sidur/Um.html">Þetta er tengill</a></STRONG></p>
-    <p>Könnun um þekkingu og reynslu lesanda af forritun. <a href="About.html">Þetta er tengill</a></STRONG></p>
-    <p>Listi af bókum um forritun. <a href="sidur/Baekur.html">Þetta er tengill</a></STRONG></p>
-    <p>???????? <a href="sidur/Konnun.html">Þetta er tengill</a></STRONG></p>
+    <p>Upplýsingar um forrit og forritun, sögu og dæmi um forrit. <a href="sidur/Um.html">Þetta er tengill</a></p>
+    <p>Könnun um þekkingu og reynslu lesanda af forritun. <a href="sidur/Konnun.html">Þetta er tengill</a></p>
+    <p>Listi af bókum um forritun. <a href="sidur/Baekur.html">Þetta er tengill</a></p>
 
     <img src="Myndir/tolva.jpg"
+    alt="tolva"
 width="600" 
 height="400">
-    
+
+
   </body>
+ 
 </html>
