--- a/v2/sidur/Um.html
+++ b/v2/sidur/Um.html
@@ -5,15 +5,14 @@
     <title>Halló heimur</title>
   </head>
   <nav>
-    <ul>
-<li><h3> <a href="../Index.html">Heim</a>
+    
+<h3> <a href="../Index.html">Heim</a>
  <a href="../sidur/baekur.html">Baekur</a>
  <a href="sidur/Um.html">Um</a>
  <a href="../sidur/Konnun.html">Konnun</a>
 </h3>
-</li>
-  </nav>
-  <body>
+</nav>
+
 <strong>„Programming is the art of telling another human being what one wants the computer to do.“
 —Donald Knuth</strong><br><br>
 
@@ -29,18 +28,19 @@
 <p></p>
 <p>Forrit sem látin eru notendum í té eru nefnd notendahugbúnaður þar sem virkni þeirra beinist að því sem á að nota tölvuna í, umfram það sem stýrikerfi hennar (til dæmis Windows) sér um. Í raun og veru kallast bæði notendahugbúnaður og stýrikefið „hugbúnaður“, rétt eins og safn ýmssa forritaþátta sem er innbyggt í vélbúnaðinn. Þau forrit sem gefa vélbúnaðinum beinar skipanir eru á formi sem örgjörvinn skilur og bregst við með því að virkja aðrar skipanir eða framkvæma einfaldar reikniaðgerðir eins og til dæmis samlagningu. En tölvur framkvæma milljónir slíkra skipana á sekúndu og það er þannig heild sem forritið lætur verða til - skipanir sem hver á fætur annarri gera eitthvað gagnlegt í sameiningu og sem oftast má endurtaka og treysta að verki á sama hátt.</p>
 <p></p>
-<p>Texti fenginn af Wikipedia síðunni „Forrit“ í ágúst 2022. <a href="https://is.wikipedia.org/wiki/Forrit"> Tengill á https://is.wikipedia.org/wiki/Forrit</a></p>
+<p> Texti fenginn af<a href="https://is.wikipedia.org/wiki/Forrit"> Wikipedia síðunni „Forrit“</a>í ágúst 2022.</p>
 <p></p>
 <img src="../Myndir/tolva.jpg"
+alt="tolva"
 width="600" 
 height="400">
 <p></p>
-<strong><u>Vinsæl forritunarmál</strong></u>
+<strong><u>Vinsæl forritunarmál</u>
 <p></p>
 <p>Samkvæmt <u> IEEE Spectrum’s Top Programming Languages 2022 </u> u eru tíu vinsælustu forritunarmálin árið 2022:</p>
 <p></p>
 
-    <th>Raðaður listi</th>
+    <h2>Raðaður listi</h2>
 
      <ol>
     <li>Python</li>
@@ -60,7 +60,7 @@ height="400">
 <strong><u>Dæmi um forrit</strong></u>
 <p>
 Forritskóði sem reiknar hrópmerkt í Python, fengin af Wikipedia:
-    <a href="https://en.wikipedia.org/wiki/Python_(programming_language))"> Tengill á https://en.wikipedia.org/wiki/Python_(programming_language))</a></p>
+    <a href="https://en.wikipedia.org/wiki/Python_(programming_language))"> Fengin af Wikipedia:</a></p>
 
 
 <p>n = int(input('Type a number, and its factorial will be printed: '))</p>
@@ -76,7 +76,9 @@ Forritskóði sem reiknar hrópmerkt í Python, fengin af Wikipedia:
 
 
 
+<p>&nbsp;&nbsp;</p>
 
+<a href="../Index.html">forsiða</a>
 
 
 
