--- a/v2/Index.html
+++ b/v2/Index.html
@@ -14,8 +14,9 @@
   </nav>
 
 
-    <h1>Á þessari síðu má finna yfirsýn yfir forrit og forritun:</h1>
-
+    <h1>Forritun</h1>
+    
+    <h3>Á þessari síðu má finna yfirsýn yfir forrit og forritun:</h3>
     <p>Upplýsingar um forrit og forritun, sögu og dæmi um forrit. <a href="sidur/Um.html">Þetta er tengill</a></p>
     <p>Könnun um þekkingu og reynslu lesanda af forritun. <a href="sidur/Konnun.html">Þetta er tengill</a></p>
     <p>Listi af bókum um forritun. <a href="sidur/Baekur.html">Þetta er tengill</a></p>
