--- a/v2/sidur/Um.html
+++ b/v2/sidur/Um.html
@@ -13,32 +13,32 @@
 </h3>
 </nav>
 
-<strong>„Programming is the art of telling another human being what one wants the computer to do.“
-—Donald Knuth</strong><br><br>
+„Programming is the art of telling another human being what one wants the computer to do.“
+—Donald Knuth<br><br>
 
 
-<strong><u>Forrit</u></strong>
+<u>Forrit</u>
 
 <p>Forrit er safn skipana sem lýsa verkefni eða verkefnum sem tölva á að vinna.</p>
-<p></p>
+
 <p>Með orðinu „forrit“ er átt við frumkóða sem ritaður er á forritunarmáli eða keyrslukóða sem gerður hefur verið eftir því. Tölvuforrit eru oftast nefnd hugbúnaður eða keyrsluforrit eða bara einfaldlega „forrit“. Frumkóði flestra tölvuforrita er röð skipana sem eiga að framkvæma skrefin í reikniritum á beinan hátt. Í öðrum forritum er því sem framkvæma á lýst þannig að viðkomandi verkvangur (enska: „platform“) geti séð um það.</p>
-<p></p>
+
 <p>Forrit eru oft rituð af forriturum, en einnig geta önnur forrit búið þau til.</p>
-<strong><u>Orðasafn</u></strong>
-<p></p>
+<u>Orðasafn</u>
+
 <p>Forrit sem látin eru notendum í té eru nefnd notendahugbúnaður þar sem virkni þeirra beinist að því sem á að nota tölvuna í, umfram það sem stýrikerfi hennar (til dæmis Windows) sér um. Í raun og veru kallast bæði notendahugbúnaður og stýrikefið „hugbúnaður“, rétt eins og safn ýmssa forritaþátta sem er innbyggt í vélbúnaðinn. Þau forrit sem gefa vélbúnaðinum beinar skipanir eru á formi sem örgjörvinn skilur og bregst við með því að virkja aðrar skipanir eða framkvæma einfaldar reikniaðgerðir eins og til dæmis samlagningu. En tölvur framkvæma milljónir slíkra skipana á sekúndu og það er þannig heild sem forritið lætur verða til - skipanir sem hver á fætur annarri gera eitthvað gagnlegt í sameiningu og sem oftast má endurtaka og treysta að verki á sama hátt.</p>
-<p></p>
+
 <p> Texti fenginn af<a href="https://is.wikipedia.org/wiki/Forrit"> Wikipedia síðunni „Forrit“</a>í ágúst 2022.</p>
-<p></p>
+
 <img src="../Myndir/tolva.jpg"
 alt="tolva"
 width="600" 
 height="400">
-<p></p>
-<strong><u>Vinsæl forritunarmál</u>
-<p></p>
+
+<u>Vinsæl forritunarmál</u>
+
 <p>Samkvæmt <u> IEEE Spectrum’s Top Programming Languages 2022 </u> u eru tíu vinsælustu forritunarmálin árið 2022:</p>
-<p></p>
+
 
     <h2>Raðaður listi</h2>
 
@@ -57,26 +57,24 @@ height="400">
 
 
         
-<strong><u>Dæmi um forrit</strong></u>
-<p>
-Forritskóði sem reiknar hrópmerkt í Python, fengin af Wikipedia:
+<u>Dæmi um forrit</u>
+
+<p>Forritskóði sem reiknar hrópmerkt í Python, fengin af Wikipedia:
     <a href="https://en.wikipedia.org/wiki/Python_(programming_language))"> Fengin af Wikipedia:</a></p>
 
 
 <p>n = int(input('Type a number, and its factorial will be printed: '))</p>
-<p></p>
-<p>if n < 0:</p>
+
+<p>if n &lt; 0:</p>
     <p>raise ValueError('You must enter a non-negative integer')</p>
-<p></p>
+
 <p>factorial = 1</p>
 <p>for i in range(2, n + 1):</p>
     <p>factorial *= i</p>
-<p></p>
+
 <p>print(factorial)</p>
 
 
-
-<p>&nbsp;&nbsp;</p>
 
 <a href="../Index.html">forsiða</a>
 
