--- a/v2/Index.html
+++ b/v2/Index.html
@@ -16,10 +16,10 @@
 
     <h1>Forritun</h1>
     
-    <h3>Á þessari síðu má finna yfirsýn yfir forrit og forritun:</h3>
-    <p>Upplýsingar um forrit og forritun, sögu og dæmi um forrit. <a href="sidur/Um.html">Þetta er tengill</a></p>
-    <p>Könnun um þekkingu og reynslu lesanda af forritun. <a href="sidur/Konnun.html">Þetta er tengill</a></p>
-    <p>Listi af bókum um forritun. <a href="sidur/Baekur.html">Þetta er tengill</a></p>
+    <p>Á þessari síðu má finna yfirsýn yfir forrit og forritun:</p>
+    <p><a href="sidur/Um.html">Upplýsingar um forrit og forritun,</a> sögu og dæmi um forrit. </p>
+    <p><a href="sidur/Konnun.html">Könnun um þekkingu og reynslu</a> lesanda af forritun.</p>
+    <p><a href="sidur/Baekur.html">Listi af bókum</a> um forritun. </p>
 
     <img src="Myndir/tolva.jpg"
     alt="tolva"
