--- a/v2/sidur/Konnun.html
+++ b/v2/sidur/Konnun.html
@@ -23,7 +23,7 @@
 
 <select name="Code" id="Code" required>
  
-    <option value="">None</option>
+    <option value="">-veldu úr listanum-</option>
   <option value="Python">Python</option>
 <option value="C++">C++</option>
 <option value="Java">Java</option>
@@ -214,7 +214,7 @@
   </div>
 
  
-    <label for="myfile">Velja skrá:</label>
+    <p><label for="myfile">Dæmi um forrit:</label></p>
     <input type="file" id="myfile" name="myfile"><br><br>
 
 
@@ -226,7 +226,7 @@
 
 <select name="Code" id="programming_language" required>
  
-    <option value="">None</option>
+    <option value="">-Veldu úr listanum-</option>
 <option value="Python">Python</option>
 <option value="C++">C++</option>
 <option value="Java">Java</option>
@@ -411,9 +411,11 @@
 
 
 
-<p>Annað:</p>
-<p><textarea name="textarea"
-rows="5" cols="20">Skrifa hér</textarea></p>
+<p><label for="story">Annað:</label></p>
+
+<textarea id="story" name="story"
+rows="5" cols="33">
+</textarea>
 
 <h1>Hafa samband</h1>
 
