--- a/v2/Index.html
+++ b/v2/Index.html
@@ -2,31 +2,51 @@
 <html lang="is">
   <head>
     <meta charset="utf-8">
-    <title>forsiða</title>
+    <title>Forrit og forritun</title>
+    <meta name="description" content="" />
+    <meta property="og:title" content="Forrit og forritun" />
+    <meta property="og:description" content="Lýsing fyrir Facebook" />
+    <meta property="og:image" content="Myndir/tolva.jpg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="Style.css"/>
   </head>
-  <nav>
-  
-<h3> <a href="Index.html">Heim</a>
- <a href="sidur/baekur.html">Baekur</a>
- <a href="sidur/Um.html">Um</a>
- <a href="sidur/Konnun.html">Konnun</a>
-</h3>
-  </nav>
-
-
-    <h1>Forritun</h1>
+  <body>
+    <header> 
+      <h1>Forrit og Forritun</h1>
+    </header>
+    <div class="content">
     
-    <p>Á þessari síðu má finna yfirsýn yfir forrit og forritun:</p>
-    <p><a href="sidur/Um.html">Upplýsingar um forrit og forritun,</a> sögu og dæmi um forrit. </p>
-    <p><a href="sidur/Konnun.html">Könnun um þekkingu og reynslu</a> lesanda af forritun.</p>
-    <p><a href="sidur/Baekur.html">Listi af bókum</a> um forritun. </p>
 
-    <img src="Myndir/tolva.jpg"
-    alt="tolva"
-width="600" 
-height="400">
+    <p class="sr-only"><a href="#texti">Beint í efni</a></p>
 
+    <nav>
+      <ul>
+        <li><a class="nav-item" href="Index.html">Forsíða</a></li>
+        <li><a class="nav-item" href="sidur/baekur.html">Bækur Um Forritun</a></li>
+        <li><a class="nav-item" href="sidur/Um.html">Um Forrit og Forritun</a></li>
+        <li><a class="nav-item" href="sidur/Konnun.html">Könnun Um Forritun</a></li>
+      <ul>
+    </nav>
 
+      <main id="texti">
+        <h2>Forritun</h2>
+        <div class="mynd">
+        <img src="Myndir/tolva.jpg" alt="tolva">
+
+          <div class="teksti">
+        <p>Á þessari síðu má finna yfirsýn yfir forrit og forritun:</p>
+        <ul>
+          <li><a href="sidur/Um.html">Upplýsingar um forrit og forritun,</a> sögu og dæmi um forrit. </li>
+          <li><a href="sidur/Konnun.html">Könnun um þekkingu og reynslu</a> lesanda af forritun.</li>
+          <li><a href="sidur/Baekur.html">Listi af bókum</a> um forritun. </li>
+        </ul>
+      </div>
+      </div>
+    </div>
+      </main>
+    <footer> </footer>
   </body>
  
 </html>
