--- a/v2/sidur/Baekur.html
+++ b/v2/sidur/Baekur.html
@@ -3,16 +3,29 @@
   <head>
     <meta charset="utf-8">
     <title>Halló</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"/>
+
+  <link rel="stylesheet" href="../Style.css"/>
+
   </head>
-<body>
+  <body>
+    <header>
+    <h1>Um Forrit og Forritun</h1>
+    </header>
+    <div class="content">
+
   <nav>
-  
-<h3> <a href="../Index.html">Heim</a>
- <a href="../sidur/baekur.html">Baekur</a>
- <a href="../sidur/Um.html">Um</a>
- <a href="../sidur/Konnun.html">Konnun</a>
-</h3>
+    <ul>  
+      <li><a href="../Index.html">Heim</a></li>
+      <li><a href="../sidur/baekur.html">Baekur</a></li>
+      <li><a href="../sidur/Um.html">Um</a></li>
+     <li><a href="../sidur/Konnun.html">Konnun</a></li>
+    </ul>
   </nav>
+
 
 
     <table> 
@@ -108,9 +121,9 @@
 
 
 </table>    
+    </div>
 
-
-<p><a href="../Index.html">Til baka á forsíðu</a></p>
+<footer><p><a href="../Index.html">Til baka á forsíðu</a></p></footer>
 
 
   </body>
