--- a/v2/sidur/Um.html
+++ b/v2/sidur/Um.html
@@ -3,28 +3,47 @@
   <head>
     <meta charset="utf-8">
     <title>Halló heimur</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"/>
+
+  <link rel="stylesheet" href="../Style.css"/>
+
   </head>
-  <nav>
-    
-<h3> <a href="../Index.html">Heim</a>
- <a href="../sidur/baekur.html">Baekur</a>
- <a href="sidur/Um.html">Um</a>
- <a href="../sidur/Konnun.html">Konnun</a>
-</h3>
-</nav>
+  <body>
+    <header> 
+      <h1>Um Forrit og Forritun</h1>
+    </header>
+    <div class="content">
 
-„Programming is the art of telling another human being what one wants the computer to do.“
-—Donald Knuth<br><br>
+      <p class="sr-only"><a href="#texti">Beint í efni</a></p>
+
+      <nav>
+        <ul>
+          <li><a class="nav-item" href="../Index.html">Heim</a></li>
+          <li><a class="nav-item" href="../sidur/baekur.html">Baekur</a></li>
+          <li><a class="nav-item" href="sidur/Um.html">Um</a></li>
+          <li><a class="nav-item" href="../sidur/Konnun.html">Konnun</a></li>
+        </ul>
+      </nav>
 
 
-<h3><u>Forrit</u></h3>
+      <main id="texti">
+<p>„Programming is the art of telling another human being what one wants the computer to do.“
+—Donald Knuth</p>
+
+
+<h2>Forrit</h2>
 
 <p>Forrit er safn skipana sem lýsa verkefni eða verkefnum sem tölva á að vinna.</p>
 
 <p>Með orðinu „forrit“ er átt við frumkóða sem ritaður er á forritunarmáli eða keyrslukóða sem gerður hefur verið eftir því. Tölvuforrit eru oftast nefnd hugbúnaður eða keyrsluforrit eða bara einfaldlega „forrit“. Frumkóði flestra tölvuforrita er röð skipana sem eiga að framkvæma skrefin í reikniritum á beinan hátt. Í öðrum forritum er því sem framkvæma á lýst þannig að viðkomandi verkvangur (enska: „platform“) geti séð um það.</p>
 
 <p>Forrit eru oft rituð af forriturum, en einnig geta önnur forrit búið þau til.</p>
-<h3><u>Orðasafn</u></h3>
+
+<h2>Orðasafn</h2>
+
 
 <p>Forrit sem látin eru notendum í té eru nefnd notendahugbúnaður þar sem virkni þeirra beinist að því sem á að nota tölvuna í, umfram það sem stýrikerfi hennar (til dæmis Windows) sér um. Í raun og veru kallast bæði notendahugbúnaður og stýrikefið „hugbúnaður“, rétt eins og safn ýmssa forritaþátta sem er innbyggt í vélbúnaðinn. Þau forrit sem gefa vélbúnaðinum beinar skipanir eru á formi sem örgjörvinn skilur og bregst við með því að virkja aðrar skipanir eða framkvæma einfaldar reikniaðgerðir eins og til dæmis samlagningu. En tölvur framkvæma milljónir slíkra skipana á sekúndu og það er þannig heild sem forritið lætur verða til - skipanir sem hver á fætur annarri gera eitthvað gagnlegt í sameiningu og sem oftast má endurtaka og treysta að verki á sama hátt.</p>
 
@@ -72,11 +91,8 @@ height="400">
 
 <p>print(factorial)</p>
 
-
-
-<a href="../Index.html">forsiða</a>
-
-
-
+</main>
+</div>
+<footer><p><a href="../Index.html">Til baka á forsíðu</a></p></footer>
   </body>
 </html>
