--- a/v2/Index.html
+++ b/v2/Index.html
@@ -33,7 +33,7 @@
       <main id="texti">
         <h2>Forritun</h2>
         <div class="mynd">
-        <img src="Myndir/tolva.jpg" alt="tolva">
+        <img src="./Myndir/tolva.jpg" alt="tolva">
 
           <div class="teksti">
         <p>Á þessari síðu má finna yfirsýn yfir forrit og forritun:</p>
