--- a/v2/sidur/Baekur.html
+++ b/v2/sidur/Baekur.html
@@ -19,15 +19,15 @@
 
   <nav>
     <ul>  
-      <li><a href="../Index.html">Heim</a></li>
-      <li><a href="../sidur/baekur.html">Baekur</a></li>
-      <li><a href="../sidur/Um.html">Um</a></li>
-     <li><a href="../sidur/Konnun.html">Konnun</a></li>
+      <li><a class="nav-item" href="../Index.html">Heim</a></li>
+      <li><a class="nav-item" href="../sidur/baekur.html">Baekur</a></li>
+      <li><a class="nav-item" href="../sidur/Um.html">Um</a></li>
+     <li><a class="nav-item" href="../sidur/Konnun.html">Konnun</a></li>
     </ul>
   </nav>
 
 
-
+<div class="bækur">
     <table> 
 
       <tr>
@@ -122,6 +122,8 @@
 
 </table>    
     </div>
+    </div>
+  </main>
 
 <footer><p><a href="../Index.html">Til baka á forsíðu</a></p></footer>
 
