--- a/v2/sidur/Um.html
+++ b/v2/sidur/Um.html
@@ -47,16 +47,14 @@
 
 <p>Forrit sem látin eru notendum í té eru nefnd notendahugbúnaður þar sem virkni þeirra beinist að því sem á að nota tölvuna í, umfram það sem stýrikerfi hennar (til dæmis Windows) sér um. Í raun og veru kallast bæði notendahugbúnaður og stýrikefið „hugbúnaður“, rétt eins og safn ýmssa forritaþátta sem er innbyggt í vélbúnaðinn. Þau forrit sem gefa vélbúnaðinum beinar skipanir eru á formi sem örgjörvinn skilur og bregst við með því að virkja aðrar skipanir eða framkvæma einfaldar reikniaðgerðir eins og til dæmis samlagningu. En tölvur framkvæma milljónir slíkra skipana á sekúndu og það er þannig heild sem forritið lætur verða til - skipanir sem hver á fætur annarri gera eitthvað gagnlegt í sameiningu og sem oftast má endurtaka og treysta að verki á sama hátt.</p>
 
-<p> Texti fenginn af<a href="https://is.wikipedia.org/wiki/Forrit"> Wikipedia síðunni „Forrit“</a>í ágúst 2022.</p>
+<small> Texti fenginn af <a class="tengill" href="https://is.wikipedia.org/wiki/Forrit">  Wikipedia síðunni „Forrit“</a>í ágúst 2022.</small>
+<div class="mynd2">
+  <img src="../Myndir/tolva.jpg" alt="tolva">
+  
 
-<img src="../Myndir/tolva.jpg"
-alt="tolva"
-width="600" 
-height="400">
+<h2>Vinsæl forritunarmál</h2>
 
-<h3><u>Vinsæl forritunarmál</u></h3>
-
-<p>Samkvæmt <u> IEEE Spectrum’s Top Programming Languages 2022 </u> u eru tíu vinsælustu forritunarmálin árið 2022:</p>
+<p>Samkvæmt <u> IEEE Spectrum’s Top Programming Languages 2022 </u> eru tíu vinsælustu forritunarmálin árið 2022:</p>
 
 
      <ol>
@@ -74,20 +72,19 @@ height="400">
 
 
         
-<h3><u>Dæmi um forrit</u></h3>
+<h2>Dæmi um forrit</h2>
 
 <p>Forritskóði sem reiknar hrópmerkt í Python, fengin af Wikipedia:
-    <a href="https://en.wikipedia.org/wiki/Python_(programming_language))"> Fengin af Wikipedia:</a></p>
+    <a class="tengill" href="https://en.wikipedia.org/wiki/Python_(programming_language))"> Fengin af Wikipedia:</a></p>
 
 
 <p>n = int(input('Type a number, and its factorial will be printed: '))</p>
-
 <p>if n &lt; 0:</p>
-<p>raise ValueError('You must enter a non-negative integer')</p>
+<div class="inn"> raise ValueError('You must enter a non-negative integer')</div>
 
 <p>factorial = 1</p>
 <p>for i in range(2, n + 1):</p>
-    <p>factorial *= i</p>
+<div class="inn">factorial *= i</div>
 
 <p>print(factorial)</p>
 
