--- a/v2/sidur/Konnun.html
+++ b/v2/sidur/Konnun.html
@@ -17,10 +17,10 @@
 
     <nav>
       <ul>
-        <li><a class="nav-item" href="../Index.html">Heim</a></li>
-          <li><a class="nav-item" href="../sidur/baekur.html">Baekur</a></li>
-          <li><a class="nav-item" href="../sidur/Um.html">Um</a></li>
-          <li><a class="nav-item" href="../sidur/Konnun.html">Konnun</a></li>
+        <li><a class="nav-item" href="../Index.html">Forsíða</a></li>
+          <li><a class="nav-item" href="../sidur/baekur.html">Bækur Um Forritun</a></li>
+          <li><a class="nav-item" href="../sidur/Um.html">Um Forrit og Forritun</a></li>
+          <li><a class="nav-item" href="../sidur/Konnun.html">Könnun Um Forritun</a></li>
       </ul>
     </nav>
 
