--- a/v2/sidur/Baekur.html
+++ b/v2/sidur/Baekur.html
@@ -16,6 +16,8 @@
     <h1>Um Forrit og Forritun</h1>
     </header>
     <div class="content">
+    
+      <p class="sr-only"><a href="#texti">Beint í efni</a></p>
 
   <nav>
     <ul>  
@@ -26,7 +28,7 @@
     </ul>
   </nav>
 
-
+  <main id="texti">
 <div class="bækur">
     <table> 
 
