--- a/v2/sidur/Um.html
+++ b/v2/sidur/Um.html
@@ -23,38 +23,58 @@
         <ul>
           <li><a class="nav-item" href="../Index.html">Forsíða</a></li>
           <li><a class="nav-item" href="../sidur/baekur.html">Bækur Um Forritun</a></li>
-          <li><a class="nav-item" href="sidur/Um.html">Um Forrit og Forritun</a></li>
+          <li><a class="nav-item" href="../sidur/Um.html">Um Forrit og Forritun</a></li>
           <li><a class="nav-item" href="../sidur/Konnun.html">Könnun Um Forritun</a></li>
         </ul>
       </nav>
 
-
+      <div class="bilum">
       <main id="texti">
+
 <p>„Programming is the art of telling another human being what one wants the computer to do.“
 —Donald Knuth</p>
 
+<section>
+  <h2>Forrit</h2>
 
-<h2>Forrit</h2>
+  <p>Forrit er safn skipana sem lýsa verkefni eða verkefnum sem tölva á að vinna.</p>
 
-<p>Forrit er safn skipana sem lýsa verkefni eða verkefnum sem tölva á að vinna.</p>
+  <p>
+    Með orðinu „forrit“ er átt við frumkóða sem ritaður er á forritunarmáli eða keyrslukóða
+    sem gerður hefur verið eftir því. Tölvuforrit eru oftast nefnd hugbúnaður eða
+    keyrsluforrit eða bara einfaldlega „forrit“. Frumkóði flestra tölvuforrita er röð skipana
+    sem eiga að framkvæma skrefin í reikniritum á beinan hátt. Í öðrum forritum er því sem
+    framkvæma á lýst þannig að viðkomandi verkvangur (enska: „platform“) geti séð um það.
+  </p>
 
-<p>Með orðinu „forrit“ er átt við frumkóða sem ritaður er á forritunarmáli eða keyrslukóða sem gerður hefur verið eftir því. Tölvuforrit eru oftast nefnd hugbúnaður eða keyrsluforrit eða bara einfaldlega „forrit“. Frumkóði flestra tölvuforrita er röð skipana sem eiga að framkvæma skrefin í reikniritum á beinan hátt. Í öðrum forritum er því sem framkvæma á lýst þannig að viðkomandi verkvangur (enska: „platform“) geti séð um það.</p>
-
-<p>Forrit eru oft rituð af forriturum, en einnig geta önnur forrit búið þau til.</p>
+  <p>Forrit eru oft rituð af forriturum, en einnig geta önnur forrit búið þau til.</p>
 
 <h2>Orðasafn</h2>
 
+<p>
+  Forrit sem látin eru notendum í té eru nefnd notendahugbúnaður þar sem virkni þeirra
+  beinist að því sem á að nota tölvuna í, umfram það sem stýrikerfi hennar (til dæmis
+  Windows) sér um. Í raun og veru kallast bæði notendahugbúnaður og stýrikefið „hugbúnaður“,
+  rétt eins og safn ýmssa forritaþátta sem er innbyggt í vélbúnaðinn. Þau forrit sem gefa
+  vélbúnaðinum beinar skipanir eru á formi sem örgjörvinn skilur og bregst við með því að
+  virkja aðrar skipanir eða framkvæma einfaldar reikniaðgerðir eins og til dæmis
+  samlagningu. En tölvur framkvæma milljónir slíkra skipana á sekúndu og það er þannig heild
+  sem forritið lætur verða til - skipanir sem hver á fætur annarri gera eitthvað gagnlegt í
+  sameiningu og sem oftast má endurtaka og treysta að verki á sama hátt.
+</p>
 
-<p>Forrit sem látin eru notendum í té eru nefnd notendahugbúnaður þar sem virkni þeirra beinist að því sem á að nota tölvuna í, umfram það sem stýrikerfi hennar (til dæmis Windows) sér um. Í raun og veru kallast bæði notendahugbúnaður og stýrikefið „hugbúnaður“, rétt eins og safn ýmssa forritaþátta sem er innbyggt í vélbúnaðinn. Þau forrit sem gefa vélbúnaðinum beinar skipanir eru á formi sem örgjörvinn skilur og bregst við með því að virkja aðrar skipanir eða framkvæma einfaldar reikniaðgerðir eins og til dæmis samlagningu. En tölvur framkvæma milljónir slíkra skipana á sekúndu og það er þannig heild sem forritið lætur verða til - skipanir sem hver á fætur annarri gera eitthvað gagnlegt í sameiningu og sem oftast má endurtaka og treysta að verki á sama hátt.</p>
+<small> Texti fenginn af <a class="tengill" href="https://is.wikipedia.org/wiki/Forrit">  
+  Wikipedia síðunni „Forrit“</a>í ágúst 2022.</small>
 
-<small> Texti fenginn af <a class="tengill" href="https://is.wikipedia.org/wiki/Forrit">  Wikipedia síðunni „Forrit“</a>í ágúst 2022.</small>
 <div class="mynd2">
   <img src="../Myndir/tolva.jpg" alt="tolva">
   
 
 <h2>Vinsæl forritunarmál</h2>
 
-<p>Samkvæmt <u> IEEE Spectrum’s Top Programming Languages 2022 </u> eru tíu vinsælustu forritunarmálin árið 2022:</p>
+<p>Samkvæmt <u> IEEE Spectrum’s Top Programming Languages 2022 
+
+  </u> eru tíu vinsælustu forritunarmálin árið 2022:</p>
 
 
      <ol>
@@ -72,24 +92,26 @@
 
 
         
-<h2>Dæmi um forrit</h2>
+     <section>
+      <h2>Dæmi um forrit</h2>
+      <p>Forritskóði sem reiknar hrópmerkt í Python, <a class="tengill" href="https://en.wikipedia.org/wiki/Python_(programming_language)">fengin af Wikipedia</a>:</p>
+      <pre><code>
+n = int(input('Type a number, and its factorial will be printed: '))
 
-<p>Forritskóði sem reiknar hrópmerkt í Python, fengin af Wikipedia:
-    <a class="tengill" href="https://en.wikipedia.org/wiki/Python_(programming_language))"> Fengin af Wikipedia:</a></p>
+if n &lt; 0:
+  raise ValueError('You must enter a non-negative integer')
 
+factorial = 1
+for i in range(2, n + 1):
+  factorial *= i
 
-<p>n = int(input('Type a number, and its factorial will be printed: '))</p>
-<p>if n &lt; 0:</p>
-<div class="inn"> raise ValueError('You must enter a non-negative integer')</div>
-
-<p>factorial = 1</p>
-<p>for i in range(2, n + 1):</p>
-<div class="inn">factorial *= i</div>
-
-<p>print(factorial)</p>
+print(factorial)
+      </code></pre>
+    </section>
 
 </main>
 </div>
+    </div>
 <footer><p><a href="../Index.html">Til baka á forsíðu</a></p></footer>
   </body>
 </html>
