--- a/v2/sidur/Konnun.html
+++ b/v2/sidur/Konnun.html
@@ -26,7 +26,7 @@
 
     <main id="texti">
       <form action="./" method="get">
-        <fieldset>
+      <fieldset>
         <legend>Reynsla af forritun</legend>
           <div class="konnun1">
             <label for="forritunarmal_kann">Forritunarmál sem ég kann best</label>
@@ -52,7 +52,7 @@
           
             <label for="forritunarmal_daemi">Dæmi um forrit:</label>
             <input type="file" id="forritunarmal_daemi" name="forritunarmal_daemi" />
-      
+          </div>
         </fieldset>
 
 
@@ -447,11 +447,8 @@
         <option>Raku</option>
       </datalist>
     </main>
-  </small>
     </div>
-  </body>
-    <footer>
-      <p><a href="../index.html">Til baka á forsíðu</a></p>
+    <footer><p><a href="../index.html">Til baka á forsíðu</a></p>
     </footer>
   </body>
 </html>
