--- a/v2/sidur/Um.html
+++ b/v2/sidur/Um.html
@@ -27,9 +27,9 @@
           <li><a class="nav-item" href="../sidur/Konnun.html">Könnun Um Forritun</a></li>
         </ul>
       </nav>
-
-      <div class="bilum">
       <main id="texti">
+      <div class="bilum">
+      
 
 <p>„Programming is the art of telling another human being what one wants the computer to do.“
 —Donald Knuth</p>
@@ -65,6 +65,7 @@
 
 <small> Texti fenginn af <a class="tengill" href="https://is.wikipedia.org/wiki/Forrit">  
   Wikipedia síðunni „Forrit“</a>í ágúst 2022.</small>
+  </section>
 
 <div class="mynd2">
   <img src="../Myndir/tolva.jpg" alt="tolva">
@@ -111,7 +112,9 @@ print(factorial)
 
 </main>
 </div>
-    </div>
+
 <footer><p><a href="../Index.html">Til baka á forsíðu</a></p></footer>
   </body>
 </html>
+
+
