--- a/v2/Index.html
+++ b/v2/Index.html
@@ -29,11 +29,11 @@
         <li><a class="nav-item" href="sidur/Konnun.html">Könnun Um Forritun</a></li>
       </ul>
     </nav>
-
-      <main id="texti">
+    <main>
+      <div id="texti">
         <h2>Forritun</h2>
         <div class="mynd">
-            <img src="./Myndir/tolva.jpg" alt="tolva">
+            <img src="./Myndir/tolva.jpg" alt="tolva"/>
 
           <div class="teksti">
         
@@ -47,6 +47,7 @@
           </div>
          </div>
         </div>
+      </div>
       </main>
     <footer> </footer>
   </body>
